fixed project spacing

--- a/app/public/css/about.css
+++ b/app/public/css/about.css
@@ -150,7 +150,7 @@ li:hover {
 }
 
 .card-text {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .card-body {
@@ -189,7 +189,7 @@ li:hover {
   }
 
   .card-text {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -201,7 +201,7 @@ li:hover {
 }
 @media only screen and (min-width: 1200px) {
   .card-btn {
-    bottom: -3rem;
+    bottom: -4rem;
     right: 1rem;
   }
 }
